--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 <script>
 // ========== CONFIG ==========
-const BACKEND_URL = 'https://f3d9-79-142-210-62.ngrok-free.app';  // <--- Change this to your Flask server URL
+const BACKEND_URL = 'https://192.168.56.1:5000';
 
 const monitorTabs = document.getElementById('monitor-tabs');
 const img = document.getElementById('screen-img');
